--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h4>Name: Rutger van Heijningen</h4>
 <h4>Studentnummer: 10272224</h4>
 
-<h1>“Homework\Week_2\data.html”<h1>
+<a href="https://github.com/Rutgerstudent/DataProcessing/blob/master/Homework/tvscraper.py">tvscraper.py</a>
 
 </body>
 </html>
