--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 </head>
 
 <body>
-<h4>Name: Rutger van Heijningen</h4>
-<h4>Studentnummer: 10272224</h4>
+<h1>Name: Rutger van Heijningen</h1>
+<h1>Studentnummer: 10272224</h1>
 
+<h1>Homework:<h1>
 <a href="https://github.com/Rutgerstudent/DataProcessing/blob/master/Homework/tvscraper.py">tvscraper.py</a>
 
 </body>
