--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1>Name: Rutger van Heijningen</h1>
 <h1>Studentnummer: 10272224</h1>
 
-<h1>Homework:<h1>
+<h1>Homework:</h1>
 <a href="https://github.com/Rutgerstudent/DataProcessing/blob/master/Homework/tvscraper.py">tvscraper.py</a>
 
 </body>
