--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h4>Studentnummer: 10272224</h4>
 
 <h4>Homework:</h4>
-<a href="https://github.com/Rutgerstudent/DataProcessing/blob/master/Homework/tvscraper.py">tvscraper.py</a>
-
+<a href="https://github.com/Rutgerstudent/DataProcessing/tree/master/Homework/Week%201">Week_1</a>
+<a href="https://github.com/Rutgerstudent/DataProcessing/tree/master/Homework/Week%202">Week_2</a>
 </body>
 </html>
