--- a/Homework/Week_2/data.html
+++ b/Homework/Week_2/data.html
@@ -370,7 +370,7 @@
   20180330,90
   20180331,72
   20180401,48</textarea>
-  <canvas id="myCanvas" length="1300" width="1000"></canvas>
+  <canvas id="myCanvas" height="1300" width="1000"></canvas>
 </body>
   <script src="Weather.js"></script>
 </html>
