--- a/Homework/Week_3/index(test).html
+++ b/Homework/Week_3/index(test).html
@@ -18,11 +18,11 @@
             }
 
             .bar {
-              fill: LightPink;
+              fill: Cornsilk;
             }
 
             .bar:hover {
-              fill: Plum ;
+              fill: BurlyWood ;
             }
 
             .d3-tip {
@@ -56,6 +56,6 @@
     <body>
         <script src="http://d3js.org/d3.v3.min.js"></script>
         <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
-        <script src="barchart.js"></script>
+        <script src="barchart(test).js"></script>
     </body>
 </html>
