--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <h4>Homework:</h4>
 <a href="https://github.com/Rutgerstudent/DataProcessing/tree/master/Homework/Week%201">Week_1</a><br>
-<a href="https://github.com/Rutgerstudent/DataProcessing/tree/master/Homework/Week%202">Week_2</a>
+<a href="https://github.com/Rutgerstudent/DataProcessing/tree/master/Homework/Week%202">Week_2</a><br>
+<a href="https://github.com/Rutgerstudent/DataProcessing/tree/master/Homework/Week_3">Week_3</a>
 </body>
 </html>
