--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <h4>Studentnummer: 10272224</h4>
 
 <h4>Homework:</h4>
-<a href="https://github.com/Rutgerstudent/DataProcessing/tree/master/Homework/Week_1">Week_1</a><br>
-<a href="https://github.com/Rutgerstudent/DataProcessing/tree/master/Homework/Week_2">Week_2</a><br>
-<a href="https://github.com/Rutgerstudent/DataProcessing/tree/master/Homework/Week_3">Week_3</a>
+<a href="https://github.com/Rutgerstudent/DataProcessing/tree/master/Homework/Week_1/index.html">Week_1</a><br>
+<a href="https://github.com/Rutgerstudent/DataProcessing/tree/master/Homework/Week_2/index.html">Week_2</a><br>
+<a href="https://github.com/Rutgerstudent/DataProcessing/blob/master/Homework/Week_3/index.html">Week_3</a>
 </body>
 </html>
