--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <h4>Homework:</h4>
 <a href="https://github.com/Rutgerstudent/DataProcessing/tree/master/Homework/Week_1">Week_1</a><br>
 <a href="https://github.com/Rutgerstudent/DataProcessing/tree/master/Homework/Week_2">Week_2</a><br>
-<a href="https://github.com/Rutgerstudent/DataProcessing/tree/master/Homework/Week_3">Week_3</a>
+<a href="https://Rutgerstudent.github.io/DataProcessingHomework/Week_3/barchart.js">Week_3</a>
 </body>
 </html>
