--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 <h4>Name: Rutger van Heijningen</h4>
 <h4>Studentnummer: 10272224</h4>
 
+<h4>Design:</h4>
+<a href="https://www.youtube.com/watch?v=R7JqEAzKEko">Design 4</a><br>
+
 <h4>Homework:</h4>
 <a href="https://Rutgerstudent.github.io/DataProcessing/Homework/Week_1/tvseries.csv">Week_1</a><br>
 <a href="https://Rutgerstudent.github.io/DataProcessing/Homework/Week_2/data.html">Week_2</a><br>
-<a href="https://Rutgerstudent.github.io/DataProcessing/Homework/Week_3/index.html">Week_3</a><br>
-<br>
-<a href="https://www.youtube.com/watch?v=R7JqEAzKEko">Design 4</a><br>
+<a href="https://Rutgerstudent.github.io/DataProcessing/Homework/Week_3/index.html">Week_3</a>
+
 </body>
 </html>
