--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <a href="https://Rutgerstudent.github.io/DataProcessing/Homework/Week_1/tvseries.csv">Week_1</a><br>
 <a href="https://Rutgerstudent.github.io/DataProcessing/Homework/Week_2/data.html">Week_2</a><br>
 <a href="https://Rutgerstudent.github.io/DataProcessing/Homework/Week_3/index.html">Week_3</a>
+<a href="https://Rutgerstudent.github.io/DataProcessing/Homework/Week_4/scatter.html">Week_3</a>
 
 </body>
 </html>
