--- a/Homework/Week_4/scatter.html
+++ b/Homework/Week_4/scatter.html
@@ -8,7 +8,7 @@ scatter.js -->
     <head>
         <meta charset="utf-8">
         <title>Interactive Scatterplot</title>
-        <link rel="stylesheet" type="text/css" href="mystyle.css">
+        <link rel="stylesheet" type="text/css" href="scatter.css">
         <script src="https://d3js.org/d3.v4.min.js"></script>
         <script src="https://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
     </head>
