--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <h4>Homework:</h4>
 <a href="https://Rutgerstudent.github.io/DataProcessing/Homework/Week_1/tvseries.csv">Week_1</a><br>
 <a href="https://Rutgerstudent.github.io/DataProcessing/Homework/Week_2/data.html">Week_2</a><br>
-<a href="https://Rutgerstudent.github.io/DataProcessing/Homework/Week_3/index.html">Week_3</a>
-<a href="https://Rutgerstudent.github.io/DataProcessing/Homework/Week_4/scatter.html">Week_3</a>
+<a href="https://Rutgerstudent.github.io/DataProcessing/Homework/Week_3/index.html">Week_3</a><br>
+<a href="https://Rutgerstudent.github.io/DataProcessing/Homework/Week_4/scatter.html">Week_4</a>
 
 </body>
 </html>
