--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <h4>Studentnummer: 10272224</h4>
 
 <h4>Design:</h4>
+<a href="https://Rutgerstudent.github.io/DataProcessing/Design/DataProcessing%20Design%20(Progess%20report%20week%201).pdf">Design 1</a><br>
+<a href="https://Rutgerstudent.github.io/DataProcessing/Design/DataProcessing%20Design%20(Progess%20report%20week%202).pdf">Design 2</a><br>
+<a href="https://Rutgerstudent.github.io/DataProcessing/Design/DataProcessing%20Design%20(Progess%20report%20week%203).pdf">Design 3</a><br>
 <a href="https://www.youtube.com/watch?v=R7JqEAzKEko">Design 4</a><br>
 
 <h4>Homework:</h4>
