--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <a href="https://Rutgerstudent.github.io/DataProcessing/Homework/Week_1/tvseries.csv">Week_1</a><br>
 <a href="https://Rutgerstudent.github.io/DataProcessing/Homework/Week_2/data.html">Week_2</a><br>
 <a href="https://Rutgerstudent.github.io/DataProcessing/Homework/Week_3/index.html">Week_3</a><br>
-<a href="https://Rutgerstudent.github.io/DataProcessing/Homework/Week_4/scatter.html">Week_4</a>
+<a href="https://Rutgerstudent.github.io/DataProcessing/Homework/Week_4/scatter.html">Week_4</a><br>
 <a href="https://Rutgerstudent.github.io/DataProcessing/Homework/Week_5/index.html">Week_5</a>
 
 </body>
